re-write weather forecast code using OpenWeatherMap instead of Pywapi. Works ongoing

--- a/config/config.ini
+++ b/config/config.ini
@@ -7,11 +7,16 @@ Graph='/home/ashley/Station/assets/Graphs'
 
 
 [location]
-lon = -3.764
-lat = 55.885
-name = Blackridge
-weatherlocation = UKXX3662
+Longitude = -3.764
+Latitude = 55.885
+Name = Blackridge
+WeatherLocation = Blackridge, UK
+MetersAboveSeaLevel=185
 
 [plotting]
 HistoryHours = 6
+
+[general]
+UpdateInterval=600
+StationRootFolder='/home/ashley'
 
