write up Sensor module (awaiting use on real hardware so debug values at moment) and minor edit to Weather module to reflect new database table names. TODO - amend Plotting function to put SQL into DB_Utils

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,7 @@
 [files]
-SensorDatabase='/home/ashley/Station/db/sensor.db'
-WeatherDatabase='home/ashley/Station/db/weather.db'
+SensorDatabase=/home/ashley/Station/db/sensor.db
+WeatherDatabase=/home/ashley/Station/db/weather.db
+ForecastJSON=/home/ashley/Station/db/forecast.json
 
 [folder]
 Graph='/home/ashley/Station/assets/Graphs'
@@ -18,5 +19,5 @@ HistoryHours = 6
 
 [general]
 UpdateInterval=600
-StationRootFolder='/home/ashley'
+
 
