add new graph to describe the day which should be more user friendly than a list of times

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,7 +4,7 @@ WeatherDatabase=/home/ashley/Station/db/weather.db
 ForecastJSON=/home/ashley/Station/db/forecast.json
 
 [folder]
-Graph='/home/ashley/Station/assets/Graphs'
+Graph=/home/ashley/Station/assets/Graphs/
 
 
 [location]
