update BLESensor module and various fixes accross all other modules

--- a/config/config.ini
+++ b/config/config.ini
@@ -17,7 +17,11 @@ MetersAboveSeaLevel=185
 [plotting]
 HistoryHours = 6
 
+[SensorTag]
+MacAddress=A0:E6:F8:B6:8C:80
+
 [general]
 UpdateInterval=600
+
 
 
