adjust files based on real-world test on raspberry pi hardware and environment. small bugfix on database utilites to return something other than an empty array

--- a/scripts/BLESensor.conf
+++ b/scripts/BLESensor.conf
@@ -1,9 +1,10 @@
 [program:BLESensor]
-command=/home/pi/Python/station/flask/bin/python3 /home/pi/Python/station/BLESensor.py
+environment=PYTHONPATH=/home/pi/Station
+directory=/home/pi/Station
+command=python3 /home/pi/Station/app/BLESensor.py
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/BLESensor.err.log
 stdout_logfile=/var/log/BLESensor.out.log
 user=pi
-
 
