--- a/scripts/Weather.conf
+++ b/scripts/Weather.conf
@@ -1,9 +1,9 @@
 [program:Weather]
-command=/home/pi/Python/station/flask/bin/python3 /home/pi/Python/station/Weather.py
+environment=PYTHONPATH=/home/pi/Station
+directory=/home/pi/Station
+command=python3 /home/pi/Station/app/modules/Weather/Weather.py
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/Weather.err.log
 stdout_logfile=/var/log/Weather.out.log
 user=pi
-
-
