correct Sun code for Golden Hour, alter formatting of Day Graph and correct location of text, add in Seasons info legend and formatting on Year Graph

--- a/config/config.ini
+++ b/config/config.ini
@@ -23,5 +23,11 @@ MacAddress=A0:E6:F8:B6:8C:80
 [general]
 UpdateInterval=600
 
+[seasons]
+Spring=21/03
+Summer=21/06
+Autumn=21/09
+Winter=21/12
+
 
 
