change safeconfigparser to configparser. Use interpolation on config file to lessen hard-coded locations. Use current working dir to find config file instead of hard-coding into users home folder

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,10 +1,14 @@
+[general]
+UpdateInterval=600
+BaseDirectory=/home/ashley/Station
+
 [files]
-SensorDatabase=/home/ashley/Station/db/sensor.db
-WeatherDatabase=/home/ashley/Station/db/weather.db
-ForecastJSON=/home/ashley/Station/db/forecast.json
+SensorDatabase=${general:BaseDirectory}/db/sensor.db
+WeatherDatabase=${general:BaseDirectory}/db/weather.db
+ForecastJSON=${general:BaseDirectory}/db/forecast.json
 
 [folder]
-Graph=/home/ashley/Station/assets/Graphs/
+Graph=${general:BaseDirectory}/assets/Graphs/
 
 
 [location]
@@ -20,14 +24,15 @@ HistoryHours = 6
 [SensorTag]
 MacAddress=A0:E6:F8:B6:8C:80
 
-[general]
-UpdateInterval=600
-
 [seasons]
 Spring=21/03
 Summer=21/06
 Autumn=21/09
 Winter=21/12
+
+
+
+
 
 
 
