--- a/scripts/YearGraph.conf
+++ b/scripts/YearGraph.conf
@@ -1,4 +1,6 @@
 [program:YearGraph]
+environment=PYTHONPATH=/home/pi/Station
+directory=/home/pi/Station
 command=python3 /home/pi/Station/app/YearGraph.py
 autostart=true
 autorestart=true
