alter file locations so it is now all relative to project folder. Add module for Lunar Calendar and important dates (phase changes) and output to JSON file

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,14 +1,16 @@
 [general]
 UpdateInterval=600
-BaseDirectory=/home/ashley/Station
+#BaseDirectory=/home/ashley/Station
 
 [files]
-SensorDatabase=${general:BaseDirectory}/db/sensor.db
-WeatherDatabase=${general:BaseDirectory}/db/weather.db
-ForecastJSON=${general:BaseDirectory}/db/forecast.json
+SensorDatabase=/db/sensor.db
+WeatherDatabase=/db/weather.db
+ForecastJSON=/db/forecast.json
+MoonJSON=/db/moon.json
+MoonPhaseJSON=/db/moonphases.json
 
 [folder]
-Graph=${general:BaseDirectory}/assets/Graphs/
+Graph=/assets/Graphs/
 
 
 [location]
