Add in a Daylight Savings Time module to check if DST is active. Useful for automatically adding hours in Sun/Moon calcs / graphs. Added in DST section in config

--- a/config/config.ini
+++ b/config/config.ini
@@ -27,11 +27,40 @@ HistoryHours = 6
 MacAddress=A0:E6:F8:B6:8C:80
 
 [seasons]
+# enter in the format "dd/mm" including the "/"
 Spring=21/03
 Summer=21/06
 Autumn=21/09
 Winter=21/12
 
+[daylightsavingtime]
+# Start/End WeekNo:
+# first, second, third day in month.. etc = 1, 2 or 3
+# last, second to last, 3rd to last etc = -1, -2 or -3
+# Start/End DayNo:
+# day of week: mon = 1; tue = 2... sun = 7
+# Start/End Month:
+# Jan = 1; Feb = 2 ... Dec = 12
+# Start / End Time:
+# midnight = 0, 1am = 1, 2am = 2 ... 1pm = 13, 2pm = 14... 11pm = 23
+# Offset:
+# +1 hours = 1, +2 hrs = 2; Note that the off offset works relative to the start time
+
+# Example: last Sunday in March
+# StartMonth = 3
+# StartWeekNo = -1
+# StartDayNo = 7
+# StartHour = 1
+
+Offset = 1
+StartMonth = 3
+StartWeekNo = -1
+StartDayNo = 7
+StartHour = 1
+EndMonth = 10
+EndWeekNo = -1
+EndDayNo = 7
+EndHour = 2
 
 
 
